update linting, almost fix update loop
